--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codeyoung - Unleash Your Kid's Full Learning Potential</title>
+    <title>Codersbee - Unleash Your Kid's Full Learning Potential</title>
     <link rel="stylesheet" href="styles_website.css">
 </head>
 <body>
      <div class="cream-background"></div>
     <header>
-        <div class="logo"><img src=""></img>
-        CodersBee</div>
+        <div class="logo"><img src="CodersBeeLogo.png"></img>
+        </div>
         <nav>
             <ul>
                 <li><a href="#" data-pos="0">Home</a></li>
