--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
      <div class="cream-background"></div>
     <header>
-        <div class="logo"><img src="CodersBeeLogo.png"></img>
+        <div class="logo"><img src="CodersBeeLogo.png" id="logo-img"></img>
         </div>
         <nav>
             <ul>
