--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <button class="btn">Book a FREE trial</button>
                 </div>
                 <div class="hero-image">
-                    <img src="Home.jpeg" alt="Online coding class illustration" >
+                    <img src="home.jpeg" alt="Online coding class illustration" >
                 </div>
             </section>
             <div class="feature-box-container">
