--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
     <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Codeyoung - Unleash Your Kid's Full Learning Potential</title>
+        <title>Codersbee - Unleash Your Kid's Full Learning Potential</title>
         <link rel="stylesheet" href="styles_website.css">
     </head>
     <body>
          <div class="cream-background"></div>
         <header>
-            <div class="logo"><img src="CodersBeeLogo.png" id="logo-img"></img>
+            <div class="logo"><img src="/Users/manisha/Downloads/CodersBeeLogo.png" id="logo-img"></img>
           </div>
             <nav>
                 <ul>
@@ -53,7 +53,7 @@
                 </div>
             </section>
             <div class="feature-box-container">
-                
+
                 <section class="feature-box">
                     <div class="feature-item">
                         <div class="feature-icon">💻</div>
@@ -183,6 +183,40 @@
                 </div>
             </div>
         </div>
+
+<!--------*/-->
+<div class="premium-learning-container">
+    <div class="image-container">
+        <img src="/Users/manisha/Downloads/girlbgremove.png" id="girl"></img>
+    </div>
+    <div class="content-container">
+        <h2 class="title">Premium Learning <span>Experience</span></h2>
+        <div class="features">
+            <div class="feature-item">
+                <div class="icon-container">
+                    <img src="/Users/manisha/Downloads/love.png" alt="Easily Accessible Icon" class="feature-icon">
+                </div>
+                <div class="feature-text">
+                    <h3>Easily Accessible</h3>
+                    <p>Learning Will feel Very Comfortable With Courslab.</p>
+                </div>
+            </div>
+            <div class="feature-item">
+                <div class="icon-container">
+                    <img src="/Users/manisha/Downloads/jigsaw.png" alt="Fun Learning Icon" class="feature-icon">
+                </div>
+                <div class="feature-text">
+                    <h3>Fun learning expe</h3>
+                    <p>Learning Will feel Very Comfortable With Courslab.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
         <div id="course-info"></div>
 
 
