--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
          <div class="cream-background"></div>
         <header>
-            <div class="logo"><img src="/Users/manisha/Downloads/CodersBeeLogo.png" id="logo-img"></img>
+            <div class="logo"><img src="CodersBeeLogo.png" id="logo-img"></img>
           </div>
             <nav>
                 <ul>
@@ -187,14 +187,14 @@
 <!--------*/-->
 <div class="premium-learning-container">
     <div class="image-container">
-        <img src="/Users/manisha/Downloads/girlbgremove.png" id="girl"></img>
+        <img src="girlbgremove.png" id="girl"></img>
     </div>
     <div class="content-container">
         <h2 class="title">Premium Learning <span>Experience</span></h2>
         <div class="features">
             <div class="feature-item">
                 <div class="icon-container">
-                    <img src="/Users/manisha/Downloads/love.png" alt="Easily Accessible Icon" class="feature-icon">
+                    <img src="love.png" alt="Easily Accessible Icon" class="feature-icon">
                 </div>
                 <div class="feature-text">
                     <h3>Easily Accessible</h3>
@@ -203,7 +203,7 @@
             </div>
             <div class="feature-item">
                 <div class="icon-container">
-                    <img src="/Users/manisha/Downloads/jigsaw.png" alt="Fun Learning Icon" class="feature-icon">
+                    <img src="jigsaw.png" alt="Fun Learning Icon" class="feature-icon">
                 </div>
                 <div class="feature-text">
                     <h3>Fun learning expe</h3>
