--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CodersBee - Future-Ready Coding and AI School</title>
-    <link rel="stylesheet" href="websitestyle_mobile.css">
+    <link rel="stylesheet" href="styles_website.css">
     <body>
     <body>
     <div class="cream-background"></div>
     <header>
         <div class="logo">
-            <img src="/Users/manisha/Downloads/CodersBeeLogo.png" alt="CodersBee Logo" id="logo-img">
+            <img src="CodersBeeLogo.png" alt="CodersBee Logo" id="logo-img">
         </div>
         <nav>
             <ul>
