--- a/index.html
+++ b/index.html
@@ -212,7 +212,14 @@ document.addEventListener('DOMContentLoaded', function() {
     if (!isMobile) carouselInterval = setInterval(showNextTestimonial, carouselSpeed);
   });
 });
+document.addEventListener('DOMContentLoaded', function() {
+    const hamburger = document.querySelector('.hamburger-menu');
+    const mobileNav = document.querySelector('.mobile-nav');
 
+    hamburger.addEventListener('click', function() {
+        mobileNav.classList.toggle('active');
+    });
+});
 
 </script>
 </body>
