--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div class="logo">
             <img src="CodersBeeLogo.png" alt="CodersBee Logo" id="logo-img">
         </div>
-        <nav>
+        
+        <nav class="desktop-nav">>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li>
@@ -43,13 +44,16 @@
                 <li>World's first kids Generative AI course</li>
                 <li>Flexible and Convenient Scheduling</li>
             </ul>
+           
             <button class="btn-trial" link="https://calendly.com/codersbee" id="free">Book a FREE trial
             </button>
         </div>
+         <nav class="mobile-nav">
         <div class="hero-image">
             <img src="home.jpeg" alt="Online coding class illustration">
         </div>
     </section>
+    </nav>
     <section class="feature-container">
     <div class="feature-box">
         <div class="feature-item">
