--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <img src="CodersBeeLogo.png" alt="CodersBee Logo" id="logo-img">
         </div>
         
-        <nav class="desktop-nav">>
+        <nav class="desktop-nav">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li>
